--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,10 @@ dependencies = [
     "google-generativeai==0.4.1",
     "gradio>=4.20.1",
     "grobid-client-python==0.0.5",
+    "ipython>=8.12.0",
     "layoutparser>=0.3.4",
     "lxml-html-clean>=0.1.1",
-    "modal>=0.57.39",
+    "modal>=0.62.198",
     "ncls==0.0.68",
     "necessary>=0.3.2",
     "numpy>=1.23.2",
@@ -29,25 +30,27 @@ dependencies = [
     "pandas~=2.1.1",
     "papermage>=0.16.0",
     "pdf2image",
+    "pytest>=8.2.2",
+    "pypdf==4.3.1",
     "python-Levenshtein",
     "pdfplumber==0.7.4",
     "pillow>=10.2.0",
     "prettytable>=3.9.0",
     "pyarrow>=13.0.0",
+    "pytest-mock>=3.14.0",
     "python-Levenshtein>=0.25.1",
     "pyyaml>=6.0.1",
     "requests>=2.25",
     "requests-html>=0.10.0",
     "scipy>=1.9.0",
+    "setuptools>=70.1.1",
     "tabulate>=0.9.0",
     "tenacity>=8.2.3",
-    "torch>=1.9.0",
+    # "torch>=1.9.0",
     "tqdm>=4.66.2",
     "transformers>=4.11.3",
     "requests-html",
-    "networkx",
-    "streamlit",
-    "matplotlib",
+    "cloudpickle",
     # Add other dependencies as needed
 ]
 
